--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -54,10 +54,10 @@ local.properties
 .worksheet
 
 ### Eclipse Patch ###
-# Eclipse Core
+# Eclipse Core		
 .project
 
-# JDT-specific (Eclipse Java Development Tools)
+# JDT-specific (Eclipse Java Development Tools)		
 .classpath
 
 ### Intellij ###
@@ -65,6 +65,11 @@ local.properties
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
+.idea/
+.mvn/
+mvnw
+mvnw.*
+*.iml
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
