--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -21,8 +21,12 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "jquery": "^3.3.1",
+    "ng-selectize": "^1.1.3",
     "rxjs": "^5.4.2",
+    "selectize": "^0.12.4",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
