--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,14 @@
             <version>2.0.5.RELEASE</version>
         </dependency>
 
-        <dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.197</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.16.18</version>
