--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.11",
     "ng2-toastr": "^4.1.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
